--- a/root/frontend/src/utils/landing.css
+++ b/root/frontend/src/utils/landing.css
@@ -1,46 +1,56 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
   
-  header {
-    display: flex;
-    justify-content: center;
-  }
+header {
+  display: flex;
+  justify-content: center;
+}
   
-  .title {
-    text-align: center;
-    font-size: 1.5rem;
-    margin: 2rem 1rem 1rem 1rem;
-    font-family: "Kalam", cursive;
-    color: rgb(46, 47, 51);
-  }
+.title {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 2rem 1rem 1rem 1rem;
+  font-family: "Kalam", cursive;
+  color: rgb(46, 47, 51);
+}
   
-  .browser_container {
-    text-align: center;
-    margin-top: 1rem;
-  }
+.browser_container {
+  text-align: center;
+  margin-top: 1rem;
+}
   
-  .browser_text {
-    font-family: "Kalam", cursive;
-    color: rgb(46, 47, 51);
-    font-size: 1.2rem;
-  }
+.browser_text {
+  font-family: "Kalam", cursive;
+  color: rgb(46, 47, 51);
+  font-size: 1.2rem;
+}
   
-  .user_container {
-    text-align: center;
-    font-family: "Kalam", cursive;
-    color: rgb(46, 47, 51);
-    font-size: 0.8rem;
-    margin: 1rem;
-  }
+.user_container {
+  text-align: center;
+  font-family: "Kalam", cursive;
+  color: rgb(46, 47, 51);
+  font-size: 0.8rem;
+  margin: 1rem;
+}
   
-  .account_container {
-    list-style: none;
-    font-family: "Kalam", cursive;
-    display: flex;
-    justify-content: space-around;
-  }
+.account_container {
+  list-style: none;
+  font-family: "Kalam", cursive;
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 6rem;
+}
   
-  footer {
-    text-align: center;
-  }
+footer {
+  text-align: end;
+  margin: 1rem;
+}
+
+.home__icon {
+  opacity: 20%;
+}
+
+.isActive {
+  opacity: 100%;
+}
