--- a/root/frontend/src/containers/landing.css
+++ b/root/frontend/src/containers/landing.css
@@ -1,52 +1,50 @@
 * {
   box-sizing: border-box;
 }
-  
-header {
+
+.landing-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  background-color: white;
-  border-bottom: 2px solid rgb(255, 243, 69);
-  padding-bottom: 10px;
+  background-color: #fff;
+  padding: 20px;
 }
 
-body {
-  background-color: white;
-}
-  
 .title {
   text-align: center;
   font-size: 1.5rem;
   margin: 2rem 1rem 1rem 1rem;
   font-family: "Kalam", cursive;
-  color: #3c4f57;}
-  
-.browser_container {
+  color: #3c4f57;
+}
+
+.browser-container {
   text-align: center;
   margin-top: 1rem;
 }
-  
-.browser_text {
+
+.browser-text {
   font-family: "Kalam", cursive;
-  color: rgb(200, 6, 6);  font-size: 1.2rem;
+  color: rgb(200, 6, 6);
+  font-size: 1.2rem;
 }
-  
-.user_container {
+
+.user-container {
   text-align: center;
   font-family: "Kalam", cursive;
-  color: rgb(46, 47, 51);
   color: #3c4f57;
   margin: 1rem;
 }
-  
-.account_container {
+
+.account-container {
   list-style: none;
   font-family: "Kalam", cursive;
   display: flex;
   justify-content: space-between;
   margin: 1rem 6rem;
 }
- 
+
 .emphasis {
   color: rgb(200, 6, 6);
 }
