--- a/root/frontend/src/containers/createaccount.css
+++ b/root/frontend/src/containers/createaccount.css
@@ -1,3 +1,12 @@
-.active {
-    opacity: 100%;
-}
+.create-account-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f0f5f9;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+  }
+  
